Configurando o banco no properties

--- a/booksCrudService/src/main/resources/application.properties
+++ b/booksCrudService/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# Server Configuration
+server.port=8080
+
+# Application Name
 spring.application.name=booksdCrud
+
+# Oracle Database Configuration
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=livraria
+spring.datasource.password=livraria
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
